# yafi

./: .gitignore  Cargo.toml
agent/: .env.template  Cargo.toml  build.rs
agent/fuzz-image/: Dockerfile  README.md
agent/fuzz-image/scripts/: grpc_handler.py  schedule.py
agent/src/: config.rs  job_handler.rs  jobs.rs  main.rs  protos.rs  system_info.rs  updates_handler.rs
proto/: agent.proto  docker.proto
samples/fuzz_container/: Dockerfile  schedule.py  schedule.sh
server/: .env  .env.template  .gitignore  Cargo.toml  package.json  schema.sql  webpack.config.js
server/assets/css/: main.css
server/assets/js/: agents.js  crash_page.js  crashes.js  index.js  job_page.js  jobs.js  main.js
server/src/: config.rs  main.rs  protos.rs  routes.rs  server.rs  utils.rs
server/src/agent_com/: model.rs  routes.rs
server/src/agent_processor/: processor.rs
server/src/broker/: agent_broker.rs  agent_dispatcher.rs  broker.rs  mod.rs
server/src/handlers/: agent.rs  crash.rs  job.rs  mod.rs  stats.rs  web.rs
server/src/models/: agent.rs  crash.rs  job.rs  mod.rs
server/static/css/: main.css
server/static/js/: adminlte.min.js.map  main.js
server/templates/: agents.html  base.html  crash_page.html  crashes.html  index.html  job_page.html  jobs.html  modals.html  navbar.html  page_header.html  sidebar.html
