[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
bollard = "0.11"
dashmap = "5.0.0"
futures = "0.3"
sysinfo = "0.23"

[build-dependencies]
tonic-build = "0.6"
