[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
bollard = "0.12"
dashmap = "5.2"
futures = "0.3"
sysinfo = "0.23"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
envy = "0.4"
futures-core = "0.3"

[build-dependencies]
tonic-build = "0.7"
