[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.20"
actix-http = "3.0.0-beta.18"
actix-files = "0.6.0-beta.13"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite" ] }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
dashmap = "5.0.0"
futures = "0.3.19"
dotenv = "0.15"
serde = "1.0.133"
serde_json = "1.0.74"
anyhow = "1.0.52"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.tera]
version = "1"
default-features = false

[build-dependencies]
tonic-build = "0.6"
