[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-http = "3.0.0-rc.1"
actix-files = "0.6.0-beta.16"
actix-multipart = "0.4.0-beta.13"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite" ] }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
dashmap = "5.0.0"
futures = "0.3.19"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }
humantime = "2.1"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
envy = "0.4"

[dependencies.tera]
version = "1"
default-features = false

[build-dependencies]
tonic-build = "0.6"
