[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-http = "3.0"
actix-files = "0.6"
actix-multipart = "0.4"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite" ] }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
dashmap = "5.2"
futures = "0.3"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
humantime = "2.1"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
envy = "0.4"
sha3 = "0.10"
tera = { version = "1.15", default-features = false }
reqwest = "0.11"
mime = "0.3"

[build-dependencies]
tonic-build = "0.7"
